--- a/hamburger.css
+++ b/hamburger.css
@@ -8,7 +8,7 @@ header {width:100%; max-width: 1000px; margin:0 auto;}
 main {width:100%; max-width: 1000px; margin:0 auto}
 
 /*** LOGO ***/
-header h1 {width:305px; height:95px; background-image: url("https://www.tdsb.on.ca/images/TDSB/TDSB_logo.jpg"); float:left;  margin-top:10px; }
+header h1 {width:305px; height:95px; background-image: url("https://www.tdsb.on.ca/images/TDSB/TDSB_logo.jpg"); background-repeat: no-repeat; float:left;  margin-top:10px; }
 header h1 span {position: absolute; left:-999em}
 
 /*** SEARCH & TRANSLATE ***/
@@ -16,15 +16,18 @@ header fieldset {float:right; clear:right; margin-top:20px}
 
 
 /*** QUICK-LINKS ***/
-#quick-links {float:right; text-align:right; margin-top:10px; font-size:0}
+#quick-links {float:right; text-align:right; margin-top:10px; font-size:0;}
+#quick-links label {display:none}
+#quick-links label, #quick-links input {display:none}
 #quick-links li {display: inline; line-height: 1.5rem; border-right: 1px solid #C6C6C6;  font-size:16px }
+#quick-links li:first-child {background-image: url("https://www.tdsb.on.ca/images/TDSB/icons/Icon_Search_Blue.jpg"); background-repeat: no-repeat; padding-left: 15px;}
 #quick-links li.last-item {border:none;}
 #quick-links a {padding:0 10px; text-decoration: none; color:#43347B;}
 
 /*** SITE NAV ***/
-#site-nav {float:left; clear:both; background-color:#fedd9f; background-image:linear-gradient(#feeecd,#fedd9f); text-align: center; width:100%; border-top: 1px solid #C6C6C6; border-bottom: 1px solid #C6C6C6; margin:10px 0; font-size:0}
+#site-nav {float:left; clear:both; background-color:#fedd9f; background-image:linear-gradient(#feeecd,#fedd9f); text-align: center; width:100%; border-top:1px solid #C6C6C6; border-bottom:1px solid #C6C6C6; margin:10px 0; font-size:0}
 #site-nav li {display:inline-block; border-left: 1px solid #C6C6C6; font-size: 16px;}
-#site-nav li:last-child {border-right: 1px solid #C6C6C6;}
+#site-nav li:last-child {border-right: 1px solid #C6C6C6; border-bottom: none;}
 #site-nav li:nth-child(1), #site-nav li:nth-child(1) a:hover {background-color: #e9e9e9; background-image: none;}
 #site-nav li:nth-child(2), #site-nav li:nth-child(2) a:hover {background-color: #f3f69b; background-image: none;}
 #site-nav li:nth-child(3), #site-nav li:nth-child(3) a:hover {background-color: #89a480; background-image: none; color:#FFF}
@@ -37,16 +40,35 @@ header fieldset {float:right; clear:right; margin-top:20px}
 
 
 /*** MAIN ***/
+#carosel {width:690px; height:200px; margin-right:15px; margin-bottom: 15px; background-color: slateblue; float:left; clear:both; color:#FFF}
+#calendar {width:295px; height:200px; margin-bottom: 15px; background-color: cornflowerblue; float:left; color:#FFF}
+#left {width:320px; height:200px; margin-right:20px; margin-bottom: 15px; background-color: coral; float:left}
+#center {width:320px; height:200px; margin-right:20px; margin-bottom: 15px; background-color: darkkhaki; float:left}
+#right {width:320px; height:200px; margin-bottom: 15px; background-color: greenyellow; float:left}
+#footer {width:100%; height:100px; background-color: teal; float:left; clear:all;  color:#FFF}
 
 
-#carosel {width:690px; height:200px; margin-right:15px; margin-bottom: 10px; background-color: slateblue; float:left; clear:both}
-#calendar {width:295px; height:200px; margin-bottom: 10px; background-color: cornflowerblue; float:left}
-#left {width:320px; height:200px; margin-right:20px; margin-bottom: 10px; background-color: coral; float:left}
-#center {width:320px; height:200px; margin-right:20px; margin-bottom: 10px; background-color: darkkhaki; float:left}
-#right {width:320px; height:200px; margin-bottom: 10px; background-color: greenyellow; float:left}
-#footer {width:100%; height:100px; background-color: teal; float:left; clear:all}
-
-
-@media screen and (max-width: 600px) {
-  #carosel, #calendar, #left, #center, #right, #footer {width:100%}
+@media screen and (max-width: 768px) {
+  /*** LOGO (SMALL) ***/
+  header h1 {width:50%; background-size: contain;}
+  /*** SEARCH & TRANSLATE ***/
+  /*** QUICK-LINKS ***/
+  #quick-links {width:30%;}
+  #quick-links ul {position:absolute; right:0}
+  #quick-links a {position:absolute; left:-999em}
+  #quick-links label {display:inline-block; text-align: right; height:50px; width:50px; background-color: red;}
+  #quick-links label:focus {background-color: darkorange;}
+  #quick-links input:checked ~ ul a, #quick-links:focus a {position:relative; left:0} 
+  #quick-links li {display:block; border: 1px solid white; background-color: #FFF;}
+  #quick-links li:hover {border-color: #C6C6C6}
+  #quick-links li:first-child {background-image: none; padding-left: 0;}
+  #quick-links a {display: block; width:100%; padding:0}
+  
+  /*** SITE NAV ***/
+  #site-nav {margin-bottom:0; display:none}
+  #site-nav li {display: block; border: 1px solid #C6C6C6; border-top: none;}
+  #site-nav a{margin-bottom:0; font-size:1em}
+  /*** MAIN ***/
+  main section {width:100% !important}
+  
 }
